# utd-cs6375-hw3

./: .flake8  .gitignore  .pydocstyle  LICENSE  README.rst  pyproject.toml  pyrightconfig.json
src/: __init__.py
src/algorithms/: __init__.py  _correlation_collaborative_filtering.py
src/data/: download_data.py
src/hw3/: algorithms.py  data.py
src/hw3/recommendation/: __init__.py  collaborative_filtering.py
src/models/: __init__.py
tests/: test_hw3.py
tools/: download_data.py
