[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "hw3"
version = "0.1.0"
description = "Homework 3 for CS 6375.503 \"Machine Learning\" at the University of Texas at Dallas."
authors = ["Travis C. LaGrone <22419287+travis-c-lagrone@users.noreply.github.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "hw3", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
sklearn = "^0.0.0"
requests = "^2.22"
pandas = "^0.25.1"

[tool.poetry.dev-dependencies]
black = {version = "19.3b0", allows-prereleases = true}
flake8 = "^3.7"
pydocstyle = "^4.0"

[tool.black]
include = "(^|/)src/.*\\.pyi?$"
safe = true
target_version = "py37"
